# bsdiff

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/liyaan/bsdiff/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  bspatch.c  native-lib.cpp
app/src/main/java/com/liyaan/bsdiff/: BsPatcher.kt  MainActivity.kt  PermissionUtils.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/liyaan/bsdiff/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
